# notyet

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: app.py  exceptions.py  log_parser.py  models.py  process_manager.py  requirements.txt  session_manager.py  websocket_handler.py
frontend/: .gitkeep  index.html
frontend/js/: app.js  utils.js  websocket-client.js
frontend/js/components/: attacker-panel.js  control-panel.js  defender-panel.js  log-panel.js  session-selector.js  status-panel.js
frontend/styles/: futuristic.css  main.css  panels.css
src/notyet/: __init__.py  __main__.py  access_key_persistence.py  aws_clients.py  cleanup.py  credential_manager.py  event_logger.py  exceptions.py  mcp_server.py  models.py  monitoring_engine.py  persistence_orchestrator.py  policy_manager.py  profile_writer.py  resource_names.py  role_persistence.py
