[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notyet"
version = "0.1.0"
description = "AWS IAM Eventual Consistency Persistence POC Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Security Research Team"}
]
keywords = ["aws", "iam", "security", "research", "eventual-consistency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "boto3>=1.28.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.82.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "moto>=4.1.0",
]

[project.scripts]
notyet = "notyet.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.hypothesis]
max_examples = 100
